--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
  cupertino_icons: ^1.0.6
   # Video Player
  video_player: ^2.8.2
+  # Payment Gateway
+ razorpay_flutter: ^1.3.6
   # Logging
  logger: ^2.0.0
 
@@ -30,11 +32,11 @@ dev_dependencies:
 
 
 flutter:
- uses-material-design: true
+  uses-material-design: true
   assets:
-   - assets/videos/
-   - web/assets/videos/
-   - assets/images/
+    - assets/videos/
+    - web/assets/videos/
+    - assets/images/
 
 
 
