added signup flow

--- a/backend/.env
+++ b/backend/.env
@@ -6,11 +6,13 @@ LOG_LEVEL=info
 
 # PostgreSQL Database
 # Format: postgres://user:password@host:port/database?sslmode=disable
-DATABASE_URL=postgres://postgres:password@localhost:5432/fooddelivery?sslmode=disable
+# For Docker: Use 'db' as hostname
+DATABASE_URL=postgres://postgres:postgres@db:5432/fooddelivery?sslmode=disable
 
 # Redis
 # Format: redis://:password@host:port/db
-REDIS_URL=redis://localhost:6379/0
+# For Docker: Use 'redis' as hostname
+REDIS_URL=redis://redis:6379/0
 
 # Razorpay API Credentials
 # Get these from https://dashboard.razorpay.com/app/keys
