--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
  razorpay_flutter: ^1.3.6
   # Logging
  logger: ^2.0.0
+  # Persistent storage for auth tokens
+ shared_preferences: ^2.2.2
 
 
 dev_dependencies:
